Kubernetes/apps/prod/kube-system/config/ingress-longhorn-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: istio
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Storage
    gethomepage.dev/name: Longhorn
    gethomepage.dev/icon: si-longhorn
    gethomepage.dev/description: Longhorn block storage management
    gethomepage.dev/href: https://longhorn.sinlessgames.com
spec:
  ingressClassName: istio
  rules:
    - host: longhorn.sinlessgames.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
